--- a/testknowledge.html
+++ b/testknowledge.html
@@ -20,7 +20,7 @@
                 <h2>First Quarter</h2>
                 <hr>
                 <ul>
-                    <li><a href="philo-quizrd.html"><h2>Philosophy</h2></a></li>
+                    <li><a href="PHILO-quizrd.html"><h2>Philosophy</h2></a></li>
                     <progress id="accuracy-philo" name="philo" value="0" max="100">0%</progress> <label for="philo">ACCURACY</label>
                     <button onclick="resetAccuracy('philo')">Reset Philosophy</button>
 
